<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgProduto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/descricao_Imagem"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtProduto"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:text="@string/titulo_Produto"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCifrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtProduto"
        android:layout_marginTop="57dp"
        android:text="@string/cifrao_Produto"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtCifrao"
        android:layout_toEndOf="@+id/txtCifrao"
        android:text="@string/preco_Produto"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtLocalDataHora"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgProduto"
        android:layout_alignStart="@+id/txtProduto"
        android:text="@string/localDataHora_Produto"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />
</RelativeLayout>