<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescricaoActivity">

    <ImageView
        android:id="@+id/imgProdutoDesc"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="@string/descricao_Imagem"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProdutoDesc"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/titulo_Produto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProdutoDesc" />

    <TextView
        android:id="@+id/txtLocalDataHoraDesc"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:text="@string/localDataHora_Produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProdutoDesc" />

    <TextView
        android:id="@+id/txtPrecoDesc"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:layout_marginEnd="13dp"
        android:text="@string/preco_Produto"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProdutoDesc" />

    <TextView
        android:id="@+id/txtCategoriaFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/titulo_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeparador1" />

    <TextView
        android:id="@+id/txtCategoriaDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/titulo_categoria"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeparador1" />

    <TextView
        android:id="@+id/txtTipoAnuncioFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_tipoAnuncio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoriaFix" />

    <TextView
        android:id="@+id/txtTipoAnuncioDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_tipoAnuncio"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoriaDesc" />

    <TextView
        android:id="@+id/txtNovoUsadoFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_novoUsado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoAnuncioFix" />

    <TextView
        android:id="@+id/txtNovoUsadoDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_novoUsado"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoAnuncioDesc" />

    <TextView
        android:id="@+id/txtGeneroFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNovoUsadoFix" />

    <TextView
        android:id="@+id/txtGeneroDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_genero"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNovoUsadoDesc" />

    <TextView
        android:id="@+id/txtDescricaoDesc"
        android:layout_width="346dp"
        android:layout_height="61dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="19dp"
        android:text="@string/titulo_descricao"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeparador2" />

    <TextView
        android:id="@+id/txtSeparador1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/separador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLocalDataHoraDesc" />

    <TextView
        android:id="@+id/txtSeparador2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/separador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGeneroFix" />

</android.support.constraint.ConstraintLayout>